fix linewrapping

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
+li {
+  word-break: break-all;
+}
+
 * {
   box-sizing: border-box; }
 
